Time: 11 ms (68.98%), Space: 55.2 MB (52.66%) - LeetHub